# gen-dentistry-busy-handover-bot

./: .gitignore  Home.py  LATENCY_OPTIMIZATIONS.md  README.md  additional_developer_notes.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
pages/: 1_1._Patient_Interaction_-_GPT.py  2_2._Supervisor_Handover_-_GPT.py  3_3._Feedback_-_GPT.py
prompts/: feedback_prompt.txt  patient_interaction_prompt.txt  patient_medical_history.txt  supervisor_handover_prompt.txt
scripts/: create_index.py  generate_and_load_identifiers.py  load_identifiers.py  measure_latency.sh
utils/: daily_client_template.html  mongodb.py  simple_bot_client.html  streamlit_utils.py  voice_bot.py  voice_bot_launcher.py
